samples/task/invalid/R23.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <title>Test Title</title>
  <shortdesc>Short description</shortdesc>
  <prolog/>
  <taskbody>
    <steps><step><cmd/><substeps><substep><cmd/></substep></substeps><info><p>info</p></info></step></steps>
  </taskbody>
</task>